add hovering and legend

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    <h1>Title</h1>
+    <h1>Final Project Prototype</h1>
+
+    <svg id="chart"></svg>
+    <div id="tooltip"></div>
+
+    <h2>Summary/Overview</h2>
+    <p>
+        We have decided to remain the same group for the final project after Project 3. Since we have already developed numerous ideas regarding the previous dataset, KoreanDB, we wanted to explore something new and more challenging. This led us to research various topics within a larger resource called PhysioNet. We were particularly drawn to this dataset because, at first glance, it presented many opportunities to develop new visualization skills.
+    </p>
+    <p>
+        So far, we have completed several key tasks. Firstly, we brainstormed ideas that interest us and could effectively convey the essence of our final project—telling a compelling story about how and why people with certain diseases struggle with gait abnormalities. Secondly, since this is a challenging dataset, we familiarized ourselves with the available tools, explored the different data types in the files, and gained a general understanding of how the variables interact. This step was moderately difficult because the dataset was formatted in a way that differed from the usual CSV files we are accustomed to, requiring us to revisit and refine our file manipulation skills.
+    </p>
+    <p>
+        We still need to finalize the exact direction of our project, which presents several challenges. One of the biggest difficulties is determining the most effective way to convey the physical disparities between different disease groups. An integral part of this challenge is incorporating animations on our website—whether through smooth transitions or fully interactive motion graphics. We have never created animations before, so we are unsure whether they will enhance or reduce the clarity of our visualization. While animations can improve engagement, they must serve the story—if they fail to do so, they become distracting rather than useful.
+    </p>
+    <p>
+        Last but not least, storytelling itself will be our biggest challenge. In past projects, we focused heavily on developing technical skills. However, for this project, we must go beyond the technical execution and focus on crafting a compelling narrative—because a truly great visualization is built on a strong story. Although we have put much thought into this aspect, we recognize that storytelling is what will make our visualization impactful, and it requires just as much effort as the technical implementation.
+    </p>
 </body>
 </html>
