Gait Animation prototype, needs toggles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <svg id="chart"></svg>
     <div id="tooltip"></div>
+    <div id="gait-animation-container">
+        <svg id="gait-animation"></svg>
+        <div id="gait-animation-title">Walking Data Animation Prototype</div>
+    </div>
+
 
     <h2>Summary/Overview</h2>
     <p>
@@ -27,5 +32,6 @@
     <p>
         Last but not least, storytelling itself will be our biggest challenge. In past projects, we focused heavily on developing technical skills. However, for this project, we must go beyond the technical execution and focus on crafting a compelling narrative—because a truly great visualization is built on a strong story. Although we have put much thought into this aspect, we recognize that storytelling is what will make our visualization impactful, and it requires just as much effort as the technical implementation.
     </p>
+
 </body>
 </html>
