Added drop down menu for data selection within Gait Animation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <svg id="chart"></svg>
     <div id="tooltip"></div>
     <div id="gait-animation-container">
+        <select id="file-selector">
+            <option value="control1.json">Control (Healthy)</option>
+            <option value="park1.json">Parkinson's Disease</option>
+            <option value="als1.json">Alzheimer's Disease</option>
+            <option value="hunt1.json">Huntington's Disease</option>
+        </select>
         <svg id="gait-animation"></svg>
         <div id="gait-animation-title">Walking Data Animation Prototype</div>
     </div>
