add graph using walking coord

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <h1>Final Project Prototype</h1>
 
-    <svg id="chart"></svg>
+    <div id="chart-container">
+        <svg id="chart"></svg>
+    </div>
+
     <div id="tooltip"></div>
     <div id="gait-animation-container">
         <select id="file-selector">
@@ -24,8 +27,12 @@
         <div id="gait-animation-title">Walking Data Animation Prototype</div>
     </div>
 
-
-    <h2>Summary/Overview</h2>
+    <h2>Walking Path Comparison</h2>
+    <div id="walking-path-container">
+        <svg id="walking-path"></svg>
+    </div>
+    
+    <h3>Summary/Overview</h3>
     <p>
         We have decided to remain the same group for the final project after Project 3. Since we have already developed numerous ideas regarding the previous dataset, KoreanDB, we wanted to explore something new and more challenging. This led us to research various topics within a larger resource called PhysioNet. We were particularly drawn to this dataset because, at first glance, it presented many opportunities to develop new visualization skills.
     </p>
