Tweaks to animation, removed Time label under each graph for cleanliness

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Final Project Prototype</h1>
     
     <div id="description-container">
-        <p id="description">This is the Gait of a healthy person</p>
+        <p id="description">What is a Gait?</p>
     </div>
     
     <div id="visualization-container">
