Changes in CSS for general styling, added Title

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project Visualization</title>
+    <title>Neurological Diseases and Their Effects on Gait: The Hidden Language of Moving</title>
     <link href="style.css" rel="stylesheet">
     <script src="global.js" type="module"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    <h1>Final Project Prototype</h1>
+    <h1>Neurological Diseases and Their Effects on Gait: The Hidden Language of Moving</h1>
     
     <div id="description-container">
         <p id="description">What is a Gait?</p>
