Added Scroll Down Prompt

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <svg id="second-walking-path" style="opacity: 0;"></svg>
         <svg id="third-walking-path" style="opacity: 0;"></svg>
         <svg id="fourth-walking-path" style="opacity: 0;"></svg>
+        <div id="scroll-prompt">
+            <span class="arrow left-arrow">&#9654;</span>
+            Scroll Down to Explore More
+            <span class="arrow right-arrow">&#9654;</span>
+        </div>
     </div>
 
     <div id="tooltip"></div>
