Visualization clean up and tidying

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <option value="hunt1.json">Huntington's Disease</option>
         </select>
         <svg id="gait-animation"></svg>
-        <div id="gait-animation-title">Walking Data Animation Prototype</div>
+        <div id="gait-animation-title">Top-Down View of Walking Strides</div>
     </div>
 
     <h2>Walking Path Comparison</h2>
