--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Neurological Diseases and Their Effects on Gait: The Hidden Language of Moving</h1>
+    <!-- alt heading? -->
     <!-- Discover the hidden language of movement: How neurological diseases like Parkinson's, Huntington's, and ALS transform our gait. -->
 
     <div id="description-container">
