add severity lables

--- a/index.html
+++ b/index.html
@@ -54,14 +54,38 @@
                 <option value="./gait_coordinates/park1_coord.json">Parkinson's Disease</option>
                 <option value="./gait_coordinates/als1_coord.json">Huntington's Disease</option>
                 <option value="./gait_coordinates/hunt1_coord.json">ALS Disease</option>
+                <option value="./gait_coordinates/control14_low.json">Control (Younger)</option>
+                <option value="./gait_coordinates/control9_mid.json">Control (Middle)</option>
+                <option value="./gait_coordinates/control12_high.json">Control (Old)</option>
+                <option value="./gait_coordinates/park2_low.json">Parkinson's (Least Severe)</option>
+                <option value="./gait_coordinates/park11_mid.json">Parkinson's (Median)</option>
+                <option value="./gait_coordinates/park1_high.json">Parkinson's (Most Severe)</option>
+                <option value="./gait_coordinates/als1_low.json">ALS (Earliest)</option>
+                <option value="./gait_coordinates/als3_mid.json">ALS (Median)</option>
+                <option value="./gait_coordinates/als9_high.json">ALS (Later)</option>
+                <option value="./gait_coordinates/hunt9_low.json">Huntington's (Least Severe)</option>
+                <option value="./gait_coordinates/hunt1_mid.json">Huntington's (Median)</option>
+                <option value="./gait_coordinates/hunt19_high.json">Huntington's (Severe)</option>
             </select>
-    
+
             <label for="file2">Select Disease 2:</label>
             <select id="file2">
                 <option value="./gait_coordinates/control1_coord.json">Control (Healthy)</option>
                 <option value="./gait_coordinates/park1_coord.json">Parkinson's Disease</option>
                 <option value="./gait_coordinates/als1_coord.json">Huntington's Disease</option>
                 <option value="./gait_coordinates/hunt1_coord.json">ALS Disease</option>
+                <option value="./gait_coordinates/control14_low.json">Control (Younger)</option>
+                <option value="./gait_coordinates/control9_mid.json">Control (Middle)</option>
+                <option value="./gait_coordinates/control12_high.json">Control (Old)</option>
+                <option value="./gait_coordinates/park2_low.json">Parkinson's (Least Severe)</option>
+                <option value="./gait_coordinates/park11_mid.json">Parkinson's (Median)</option>
+                <option value="./gait_coordinates/park1_high.json">Parkinson's (Most Severe)</option>
+                <option value="./gait_coordinates/als1_low.json">ALS (Earliest)</option>
+                <option value="./gait_coordinates/als3_mid.json">ALS (Median)</option>
+                <option value="./gait_coordinates/als9_high.json">ALS (Later)</option>
+                <option value="./gait_coordinates/hunt9_low.json">Huntington's (Least Severe)</option>
+                <option value="./gait_coordinates/hunt1_mid.json">Huntington's (Median)</option>
+                <option value="./gait_coordinates/hunt19_high.json">Huntington's (Severe)</option>
             </select>
 
             <div>
