Imported more json files for Top-Down view viz, added more options

--- a/index.html
+++ b/index.html
@@ -140,10 +140,16 @@
         <div class="column right-column">
             <div id="gait-animation-container">
                 <select id="file-selector">
-                    <option value="control1.json">Control (Healthy)</option>
-                    <option value="park1.json">Parkinson's Disease</option>
-                    <option value="als1.json">Amyotrophic Lateral Sclerosis (ALS)</option>
-                    <option value="hunt1.json">Huntington's Disease</option>
+                    <option value="./strides/control1.json">Control (Healthy)</option>
+                    <option value="./strides/park2.json">Parkinson's (Least Severe)</option>
+                    <option value="./strides/park11.json">Parkinson's (Median)</option>
+                    <option value="./strides/park1.json">Parkinson's (Most Severe)</option>
+                    <option value="./strides/als1.json">ALS (Earliest)</option>
+                    <option value="./strides/als3.json">ALS (Median)</option>
+                    <option value="./strides/als9.json">ALS (Later)</option>
+                    <option value="./strides/hunt9.json">Huntington's (Least Severe)</option>
+                    <option value="./strides/hunt1.json">Huntington's (Median)</option>
+                    <option value="./strides/hunt19.json">Huntington's (Severe)</option>
                 </select>
                 <svg id="gait-animation"></svg>
                 <div id="gait-animation-title">Top-Down View of Walking Strides</div>
