Minor text addition/edits

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     This graph shows the stride of each step, highlighting the differences in gait patterns between conditions and severities.
                 </p>
                 <p>
-                    The color-coded stride paths are provided to help visualize gate patterns along with trails.
+                    This is a closer look of what you saw above. The color-coded stride paths are provided to help visualize gate patterns along with trails.
                 </p>
                 <p>
                     For an extreme example of a large difference, try comparing 'Parkingson's (Middle Stage)' with a Healthy individual.
