Hook added,"more below" prompt added, click prompt added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Neurological Diseases and Their Effects on Gait: The Hidden Language of Moving</h1>
 
     <div id="description-container">
-        <p id="description">What is a Gait?</p>
+        <p id="description">Every year, more than 10 million people worldwide are diagnosed with neurodegenerative diseases. <br>For many, the first silent symptom was a subtle change in their walking pattern—changes that often appear years before other symptoms.</p>
     </div>
     
     <div id="visualization-container">
@@ -107,6 +107,14 @@
                     It's the most extreme case we have a 'short shuffling' gait pattern. Other irregularities in strides can be spotted among 
                     our other selections as well. See if you can spot them!
                 </p>
+                <br>
+                <br>
+                <br>
+                <div id="more-below">
+                    <span class="arrow left-arrow">&#9654;</span>
+                    Another View Below
+                    <span class="arrow right-arrow">&#9654;</span>
+                </div>
             </div>
         </div>
     </div>
